--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
 
       - name: Inject API Key
         run: |
-          sed -i 's/YOUR_API_KEY_PLACEHOLDER/${{ secrets.GOOGLE_API_KEY }}/g' index.html
+          sed -i 's/YOUR_API_KEY_PLACEHOLDER/${{ secrets.GOOGLEMAPS_API_KEY }}/g' index.html
         env:
-          GOOGLE_API_KEY: ${{ secrets.GOOGLEMAPS_API_KEY }}
+          GOOGLEMAPS_API_KEY: ${{ secrets.GOOGLEMAPS_API_KEY }}
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
