--- a/deploy.yml
+++ b/deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Replace API Key in index.html
       run: |
-        sed -i 's/YOUR_API_KEY_PLACEHOLDER/${{ secrets.API_KEY }}/g' index.html
+        sed -i 's/API/${{ secrets.GOOGLE_API_KEY }}/g' index.html
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
