--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,26 +3,38 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main
+      - main  # Adjust branch name as needed
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Replace API Key in index.html
-      run: |
-        sed -i "s/YOUR_PLACEHOLDER_API_KEY/${{ secrets.GOOGLE_API_KEY }}/g" index.html
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
 
-    - name: Show updated index.html
-      run: cat index.html  # Optional: Output the updated index.html to see changes
+      - name: Install dependencies
+        run: npm install  # Replace with your package manager command if not using npm
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: .  # Adjust if your index.html is in a subdirectory
-        publish_branch: gh-pages
+      - name: Replace API Key in index.html
+        run: |
+          sed -i "s/\${GOOGLE_API_KEY}/$GOOGLE_API_KEY/g" index.html
+
+      - name: Show updated index.html
+        run: cat index.html  # Optional: Output the updated index.html to see changes
+
+      - name: Build and deploy
+        run: |
+          npm run build  # Adjust if you have a different build command
+          npm run deploy  # Adjust if you have a different deployment command
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist  # Adjust to the directory where your built files are
